// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rux-input renders 1`] = `
<rux-input value="">
  <mock:shadow-root>
    <div class="rux-form-field" part="form-field">
      <div class="rux-input rux-input--medium" part="input-field">
        <span class="rux-input-prefix" part="prefix">
          <slot name="prefix"></slot>
        </span>
        <input aria-invalid="false" class="native-input" id="rux-input-1" part="input" type="text" value="">
        <span class="rux-input-suffix" part="suffix">
          <slot name="suffix"></slot>
        </span>
      </div>
    </div>
    <div class="hidden" part="error-text">
      <svg fill="none" height="14" viewBox="0 0 14 14" width="14" xmlns="http://www.w3.org/2000/svg">
        <path clip-rule="evenodd" d="M11.393 12.25c.898 0 1.458-.974 1.009-1.75L8.009 2.91a1.166 1.166 0 0 0-2.018 0L1.598 10.5c-.449.776.111 1.75 1.01 1.75h8.784ZM7 8.167a.585.585 0 0 1-.583-.584V6.417c0-.321.262-.584.583-.584.32 0 .583.263.583.584v1.166c0 .321-.262.584-.583.584Zm-.583 1.166V10.5h1.166V9.333H6.417Z" fill="currentColor" fill-rule="evenodd"></path>
      </svg>
      <slot name="error-text"></slot>
    </div>
    <div class="hidden" part="help-text">
      <slot name="help-text"></slot>
    </div>
  </mock:shadow-root>
  <input class="aux-input" type="hidden" value="">
</rux-input>
`;

exports[`rux-input renders label prop 1`] = `
<rux-input label="hello" value="">
  <mock:shadow-root>
    <div class="rux-form-field" part="form-field">
      <label aria-hidden="false" class="rux-input-label" htmlfor="rux-input-2" part="label">
        <span>
          <slot name="label">
            hello
          </slot>
        </span>
      </label>
      <div class="rux-input rux-input--medium" part="input-field">
        <span class="rux-input-prefix" part="prefix">
          <slot name="prefix"></slot>
        </span>
        <input aria-invalid="false" class="native-input" id="rux-input-2" part="input" type="text" value="">
        <span class="rux-input-suffix" part="suffix">
          <slot name="suffix"></slot>
        </span>
      </div>
    </div>
    <div class="hidden" part="error-text">
      <svg fill="none" height="14" viewBox="0 0 14 14" width="14" xmlns="http://www.w3.org/2000/svg">
        <path clip-rule="evenodd" d="M11.393 12.25c.898 0 1.458-.974 1.009-1.75L8.009 2.91a1.166 1.166 0 0 0-2.018 0L1.598 10.5c-.449.776.111 1.75 1.01 1.75h8.784ZM7 8.167a.585.585 0 0 1-.583-.584V6.417c0-.321.262-.584.583-.584.32 0 .583.263.583.584v1.166c0 .321-.262.584-.583.584Zm-.583 1.166V10.5h1.166V9.333H6.417Z" fill="currentColor" fill-rule="evenodd"></path>
      </svg>
      <slot name="error-text"></slot>
    </div>
    <div class="hidden" part="help-text">
      <slot name="help-text"></slot>
    </div>
  </mock:shadow-root>
  <input class="aux-input" type="hidden" value="">
</rux-input>
`;

exports[`rux-input renders label slot 1`] = `
<rux-input value="">
  <mock:shadow-root>
    <div class="rux-form-field" part="form-field">
      <div class="rux-input rux-input--medium" part="input-field">
        <span class="rux-input-prefix" part="prefix">
          <slot name="prefix"></slot>
        </span>
        <input aria-invalid="false" class="native-input" id="rux-input-3" part="input" type="text" value="">
        <span class="rux-input-suffix" part="suffix">
          <slot name="suffix"></slot>
        </span>
      </div>
    </div>
    <div class="hidden" part="error-text">
      <svg fill="none" height="14" viewBox="0 0 14 14" width="14" xmlns="http://www.w3.org/2000/svg">
        <path clip-rule="evenodd" d="M11.393 12.25c.898 0 1.458-.974 1.009-1.75L8.009 2.91a1.166 1.166 0 0 0-2.018 0L1.598 10.5c-.449.776.111 1.75 1.01 1.75h8.784ZM7 8.167a.585.585 0 0 1-.583-.584V6.417c0-.321.262-.584.583-.584.32 0 .583.263.583.584v1.166c0 .321-.262.584-.583.584Zm-.583 1.166V10.5h1.166V9.333H6.417Z" fill="currentColor" fill-rule="evenodd"></path>
      </svg>
      <slot name="error-text"></slot>
    </div>
    <div class="hidden" part="help-text">
      <slot name="help-text"></slot>
    </div>
  </mock:shadow-root>
  <div slot="label">
    hello
  </div>
  <input class="aux-input" type="hidden" value="">
</rux-input>
`;

exports[`rux-input renders rux-icon if type is password 1`] = `
<rux-input type="password" value="">
  <mock:shadow-root>
    <div class="rux-form-field" part="form-field">
      <div class="rux-input rux-input--medium" part="input-field">
        <span class="rux-input-prefix" part="prefix">
          <slot name="prefix"></slot>
        </span>
        <input aria-invalid="false" autocomplete="off" class="native-input" id="rux-input-4" part="input" type="password" value="">
        <button class="pw-button">
          <rux-icon exportparts="icon" icon="visibility" size="22px"></rux-icon>
        </button>
        <span class="rux-input-suffix" part="suffix">
          <slot name="suffix"></slot>
        </span>
      </div>
    </div>
    <div class="hidden" part="error-text">
      <svg fill="none" height="14" viewBox="0 0 14 14" width="14" xmlns="http://www.w3.org/2000/svg">
        <path clip-rule="evenodd" d="M11.393 12.25c.898 0 1.458-.974 1.009-1.75L8.009 2.91a1.166 1.166 0 0 0-2.018 0L1.598 10.5c-.449.776.111 1.75 1.01 1.75h8.784ZM7 8.167a.585.585 0 0 1-.583-.584V6.417c0-.321.262-.584.583-.584.32 0 .583.263.583.584v1.166c0 .321-.262.584-.583.584Zm-.583 1.166V10.5h1.166V9.333H6.417Z" fill="currentColor" fill-rule="evenodd"></path>
      </svg>
      <slot name="error-text"></slot>
    </div>
    <div class="hidden" part="help-text">
      <slot name="help-text"></slot>
    </div>
  </mock:shadow-root>
  <input class="aux-input" type="hidden" value="">
</rux-input>
`;
